[gd_scene load_steps=4 format=3 uid="uid://crplra5uasdjy"]

[ext_resource type="Script" path="res://scripts/upgrades/knife_scene.gd" id="1_k38ow"]
[ext_resource type="Script" path="res://scripts/shared/cooldown_timer.gd" id="2_wqiyq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jgn3q"]
radius = 40.0

[node name="KnifeScene" type="Node2D"]
position = Vector2(0, -13)
script = ExtResource("1_k38ow")

[node name="FireTimer" type="Timer" parent="."]
autostart = true
script = ExtResource("2_wqiyq")

[node name="DamageZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageZone"]
shape = SubResource("CircleShape2D_jgn3q")
debug_color = Color(0.996078, 0, 0.156863, 0.419608)

[connection signal="timeout" from="FireTimer" to="." method="_on_fire_timer_timeout"]
